third_party/WebKit/WebCore/page/GeolocationPositionCache.cpp
@@ -27,15 +27,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "GeolocationPositionCache.h"
 
-#if ENABLE(DATABASE)
-
 #include "Geoposition.h"
 #include "SQLValue.h"
 #include "SQLiteDatabase.h"
 #include "SQLiteFileSystem.h"
 #include "SQLiteStatement.h"
 #include "SQLiteTransaction.h"
-
 
 namespace WebCore {
 
@@ -176,5 +173,3 @@ void GeolocationPositionCache::writeToDB(const Geoposition* position)
 }
 
 } // namespace WebCore
-
-#endif //ENABLE(DATABASE)
